# pastacopy

./: .bumpversion.toml  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/actions/python-build/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: build.yml  bump-version.yml  bump.yml  ci.yml  docs.yml  publish.yml  pypi-publish.yml  python-ci.yml  release.yml  ruff.yml  tests.yml
api_reference/SUMMARY/: index.html
api_reference/pastacopy/__init__/: index.html
api_reference/pastacopy/clipboard_to_markdown/: index.html
docs/: index.md
docs/api_reference/pastacopy/: __init__.md  clipboard_to_markdown.md
docs/example_notebooks/: demo.ipynb
docs/overrides/styles/: colors.css
example_notebooks/SUMMARY/: index.html
example_notebooks/demo/: index.html
scripts/: copy_readme_to_index.py  gen_ref_pages.py  generate_api_reference.py  generate_example_notebooks.py  generate_home_from_readme.py
search/: search_index.json
src/pastacopy/: __init__.py  clipboard_to_markdown.py
tests/: conftest.py  test_clipboard_to_markdown.py
