[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pastacopy"
version = "0.1.0"
description = "Magical copy-paste utils."
authors = [
    { name = "Eldar Abraham", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Pillow"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[project.urls]
Homepage = "https://eldarab.github.io/pastacopy/"
